# dbdahl.r-universe.dev

./: DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  packages.json  packages.json-off
R/: DDCRPPartition.R  EPAPartition.R  PeggedTimeDependentPartition.R  bantha.R  caviarpd.R  choi25.R  cocluster_mc.R  compute_expected_gsh_loss.R  crp_vs_lorenz.R  cubic_spline.R  dcrpip.R  dcrpk.R  densityEstimate.R  dlorenzip.R  downsample.R  dpmm.R  enumerate_integer_partitions.R  enumerate_partitions.R  est.part.f.R  expected_loss.R  gsh_loss_builder_new.R  gsh_loss_builder_process.R  initialize_expected_gsh_loss.R  internal.R  is_dag.R  lorenz.R  lorenzip_diagnostics.R  mkDistrPtr.R  n_integer_partitions.R  n_partitions.R  nealAlgorithm.R  nealAlgorithmCorrelatedPartitions.R  params.R  plan.R  prPartition.R  rcrpk.R  rlorenzip.R  samplePartition.R  splinclust.R  treeSB.R  (+6 more)
data/: choi25.RData
inst/: AUTHORS
man/: DDCRPPartition.Rd  EPAPartition.Rd  ShrinkagePartition.Rd  bantha-package.Rd  bantha.Rd  caviarpd-package.Rd  caviarpd.Rd  choi25.Rd  cocluster_mc.Rd  compute_expected_gsh_loss.Rd  crp_vs_lorenz.Rd  cubic_spline.Rd  dcrpip.Rd  dcrpk.Rd  dlorenzip.Rd  downsample.Rd  dpmm_fit.Rd  dpmm_generate.Rd  enumerate_integer_partitions.Rd  enumerate_partitions.Rd  est.part.f.Rd  gini.Rd  gini_coefficient.Rd  gourd-package.Rd  gsh_loss_builder_new.Rd  gsh_loss_builder_process.Rd  initialize_expected_gsh_loss.Rd  is_dag.Rd  lorenz_evaluate.Rd  lorenz_increments.Rd  (+31 more)
src/rust/: Cargo.toml  rust-dahl-crp-distr  rust-dahl-lorenz-ip-distr
src/rust/epa/: Cargo.toml
src/rust/epa/src/: clust.rs  epa.rs  lib.rs
src/rust/src/: clustering.rs  lib.rs
(+27 files in other folders)
