[package]
name = "rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.88"

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1
lto = "thin"

[dependencies]
num_cpus = "1.13.1"
crossbeam = "0.8.1"
rand = "0.10.0"
rand_distr = "0.6.0"
rand_pcg = "0.10.0"
roxido = { path="roxido" }
dahl-randompartition = { git="https://github.com/dbdahl/rust-dahl-randompartition.git", rev= "56edec8" }
# dahl-randompartition = { path="/home/dahl/docs/devel/rust-dahl-randompartition" }
