[package]
name = "rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.88"

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1
lto = "thin"

[dependencies]
roxido = { path="roxido" }
slice_sampler = { git="https://github.com/dbdahl/rust_slice_sampler", rev = "5b845c4" }
