[package]
name = "rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.88"

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1
lto = "thin"

[dependencies]
rand = "0.10.0"
rand_distr = "0.6.0"
nalgebra = "0.34.1"
statrs = { version = "0.18", features = ["nalgebra", "rand"] }
roxido = { path="roxido" }
num-traits = "0.2.19"

